# libsodium

./: configure.ac
src/libsodium/crypto_core/hforro14/: core_hforro14.c
src/libsodium/crypto_stream/forro14/ref/: forro14_ref.c
src/libsodium/include/sodium/private/: forro14_ietf_ext.h
test/: Makefile.am
test/default/: aead_xforro14poly1305  aead_xforro14poly1305.exp  forro14  xforro14  xforro14.c  xforro14.exp
test/speed/: Makefile.am  speed.h  speed_sodium  speed_sodium.c
